--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/SessionExpiredPage.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/SessionExpiredPage.scala.html
@@ -14,13 +14,11 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.config.AppConfig
-
 @this(layout: Layout)
 
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = Some(messages("session_expired.title"))) {
-    <h1 class="govuk-heading-xl">@messages("session_expired.heading")</h1>
+    <h1 class="govuk-heading-xl">@messages("session_expired.title")</h1>
     <p class="govuk-body">@messages("session_expired.guidance")</p>
 }
