--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/ErrorTemplate.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/ErrorTemplate.scala.html
@@ -18,6 +18,8 @@
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
 @layout(pageTitle = Some(pageTitle)) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
-    <p class="govuk-body">@{Text(message).asHtml}</p>
+
+    @components.heading(heading)
+    @components.paragraph(message)
+
 }
