--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/heading.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/heading.scala.html
@@ -14,12 +14,6 @@
  * limitations under the License.
  *@
 
-@this(layout: Layout)
+@(content: String)
 
-@()(implicit request: Request[_], messages: Messages)
-
-    @layout(pageTitle = Some(messages("start_page.title"))) {
-
-        @components.heading(messages("start_page.title"))
-        @components.paragraph(messages("start_page.guidance"))
-    }
+<h1 class="govuk-heading-xl">@{Text(content).asHtml}</h1>
