--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/backLink.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/backLink.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,12 +12,15 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.pages
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.ClaimType
+@this(govukBackLink: GovukBackLink)
 
-trait QuestionPage[A] extends Page
+@(messageKey: String = "site.back")(implicit messages: Messages)
 
-case object ClaimTypePage extends QuestionPage[ClaimType]
+@govukBackLink(BackLink(
+    href = "javascript:history.back()",
+    content = Text(messages(messageKey))
+))
