NF-107 - bug fixes and improvements to UI - set correct ttl index on upload-data cache - remove ability to add multiple files by using back button - add fake 'Continue' button to upload-in-progress screen

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/continueButton.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/continueButton.scala.html
@@ -18,6 +18,6 @@
 
 @this(govukButton: GovukButton)
 
-@(messageKey: String = "site.continue")(implicit messages: Messages)
+@(messageKey: String = "site.continue", disabled: Boolean = false)(implicit messages: Messages)
 
-@govukButton(Button(content = Text(messages(messageKey)), attributes = Map("id" -> "submit")))
+@govukButton(Button(content = Text(messages(messageKey)), attributes = Map("id" -> "submit"), disabled = disabled))
