--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/errorSummary.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/errorSummary.scala.html
@@ -18,12 +18,12 @@
 
 @this(govukErrorSummary: GovukErrorSummary)
 
-@(errors: Seq[FormError], errorFieldName: Option[String] = None)(implicit messages: Messages)
+@(errors: Seq[FormError], focusOverrides: Map[String, String] = Map.empty)(implicit messages: Messages)
 
 @errorList = @{errors.map { error =>
     val errorKey = error.key.replace(".", "_").replace('[', '_').replace("]", "")
     ErrorLink(
-        href = Some(s"#${errorFieldName.getOrElse(errorKey)}"),
+        href = Some(s"#${focusOverrides.getOrElse(errorKey, errorKey)}"),
         content = Text(messages(error.message, error.args: _*))
     )
 }}
