NF-175 - Repayment calculation - input fields

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersPage.scala.html
@@ -126,6 +126,16 @@
                     content = HtmlContent(claim.reclaimDutyTypes.map(dutyType => MessageKey.apply("check_answers.repayment.reclaimDutyType", dutyType.toString)).mkString(", "))
                 ),
                 actions = None
+            )),
+            Some(SummaryListRow(
+                classes = "reclaim_duty_total_row",
+                key = Key(
+                    content = Text(messages("check_answers.repayment.total"))
+                ),
+                value = Value(
+                    content = Text(s"£${claim.repaymentTotal}")
+                ),
+                actions = None
             ))
         )
     )
