NF-175 - combined DutyRepaymentController and restructured UserAnswers

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersPage.scala.html
@@ -123,7 +123,7 @@
                     content = Text(messages("check_answers.repayment.reclaimDutyType"))
                 ),
                 value = Value(
-                    content = HtmlContent(claim.reclaimDutyTypes.map(dutyType => MessageKey.apply("check_answers.repayment.reclaimDutyType", dutyType.toString)).mkString(", "))
+                    content = HtmlContent(claim.reclaimDutyPayments.keys.map(dutyType => MessageKey.apply("check_answers.repayment.reclaimDutyType", dutyType)).mkString(", "))
                 ),
                 actions = None
             )),
