--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
@@ -14,15 +14,23 @@
  * limitations under the License.
  *@
 
-@this()
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.controllers.routes.KeepAliveController
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.controllers.routes.SignOutController
 
-@(headBlock: Option[Html] = None)
+@this(hmrcTimeoutDialog: HmrcTimeoutDialog, appConfig: AppConfig)
+
+@(headBlock: Option[Html] = None)(implicit messages: Messages)
 @headBlock
-
-<script src='@routes.Assets.versioned("lib/govuk-frontend/govuk/all.js")'></script>
-<script src='@routes.Assets.versioned("lib/hmrc-frontend/hmrc/all.js")'></script>
-<script src='@controllers.routes.Assets.versioned("javascripts/nidacfrontend.js")'></script>
 
 <!--[if lte IE 8]><script src='@controllers.routes.Assets.versioned("javascripts/html5shiv.min.js")'></script><![endif]-->
 <!--[if lte IE 8]><link href='@controllers.routes.Assets.versioned("stylesheets/application-ie-8.css")' rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href='@controllers.routes.Assets.versioned("stylesheets/application.css")' media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+
+ @hmrcTimeoutDialog(TimeoutDialog(
+ timeout = Some(appConfig.timeoutDialogTimeout),
+ countdown = Some(appConfig.timeoutDialogCountdown),
+ keepAliveUrl = Some(KeepAliveController.keepAlive().url),
+ signOutUrl = Some(SignOutController.signOut().url),
+ timeoutUrl = Some(SignOutController.signOut().url),
+ language = Some(messages.lang.code)
+))
