NF-194 - only implement if user logged in.

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
@@ -16,21 +16,26 @@
 
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.controllers.routes.KeepAliveController
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.controllers.routes.SignOutController
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.requests.IdentifierRequest
 
 @this(hmrcTimeoutDialog: HmrcTimeoutDialog, appConfig: AppConfig)
 
-@(headBlock: Option[Html] = None)(implicit messages: Messages)
+@(headBlock: Option[Html] = None)(implicit request: Request[_], messages: Messages)
 @headBlock
 
 <!--[if lte IE 8]><script src='@controllers.routes.Assets.versioned("javascripts/html5shiv.min.js")'></script><![endif]-->
 <!--[if lte IE 8]><link href='@controllers.routes.Assets.versioned("stylesheets/application-ie-8.css")' rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href='@controllers.routes.Assets.versioned("stylesheets/application.css")' media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 
- @hmrcTimeoutDialog(TimeoutDialog(
- timeout = Some(appConfig.timeoutDialogTimeout),
- countdown = Some(appConfig.timeoutDialogCountdown),
- keepAliveUrl = Some(KeepAliveController.keepAlive().url),
- signOutUrl = Some(SignOutController.signOut().url),
- timeoutUrl = Some(SignOutController.signOut().url),
- language = Some(messages.lang.code)
-))
+@if(request.isInstanceOf[IdentifierRequest[_]]) {
+    @hmrcTimeoutDialog(
+        TimeoutDialog(
+            timeout = Some(appConfig.timeoutDialogTimeout),
+            countdown = Some(appConfig.timeoutDialogCountdown),
+            keepAliveUrl = Some(KeepAliveController.keepAlive().url),
+            signOutUrl = Some(SignOutController.signOut().url),
+            timeoutUrl = Some(SignOutController.signOut().url),
+            language = Some(messages.lang.code)
+        )
+    )
+}
