--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
@@ -52,7 +52,7 @@
 }
 
 @signOutHref = @{
-    if(request.isInstanceOf[IdentifierRequest[_]] || request.isInstanceOf[DataRequest[_]])
+    if(request.isInstanceOf[IdentifierRequest[_]])
         Some(SignOutController.signOut().url)
     else
         None
