--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputRadio.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/inputRadio.scala.html
@@ -22,7 +22,6 @@
         legend: Option[String] = None,
         legendAsHeading: Boolean = true,
         hint: Option[Html] = None,
-        legendClasses: String = "govuk-fieldset__legend--l",
         contentHtml: Option[Html] = None,
         inline: Boolean = false
 )(implicit messages: Messages)
@@ -34,7 +33,7 @@
         legend = Some(Legend(
             content = Text(text),
             isPageHeading = legendAsHeading,
-            classes = legendClasses
+            classes = if(legendAsHeading) "govuk-fieldset__legend--l" else ""
         ))
     )),
 
