--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ItemNumbersPage.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ItemNumbersPage.scala.html
@@ -21,6 +21,7 @@
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.ItemNumbers
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.errorSummary
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.components.Title
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 
 @this(
         layout: Layout,
@@ -29,9 +30,9 @@
         errorSummary: errorSummary,
         continueButton: components.continueButton )
 
-@(form: Form[ItemNumbers])(implicit request: Request[_], messages: Messages)
+@(form: Form[ItemNumbers], backLink: NavigatorBack)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = Title(form, messages("itemNumbers.title"))) {
+@layout(pageTitle = Title(form, messages("itemNumbers.title")), backLink) {
 
     @formHelper(action = ItemNumbersController.onSubmit(), 'autoComplete -> "off") {
         @errorSummary(form.errors)
