--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/BankDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/BankDetailsView.scala.html
@@ -18,9 +18,10 @@
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.Layout
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.controllers.makeclaim.routes._
-@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.Address
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.BankDetails
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.errorSummary
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.components.Title
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 
 @this(
         layout: Layout,
@@ -30,58 +31,45 @@
         errorSummary: errorSummary,
         continueButton: components.continueButton )
 
-@(form: Form[Address])(implicit request: Request[_], messages: Messages)
+@(form: Form[BankDetails], backLink: NavigatorBack)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = Title(form, messages("address.title"))) {
+@layout(pageTitle = Title(form, messages("bankDetails.title")), backLink) {
 
-    @formHelper(action = AddressController.onSubmit(), 'autoComplete -> "off") {
+    @formHelper(action = BankDetailsController.onSubmit(), 'autoComplete -> "off") {
         @errorSummary(form.errors)
 
         @fieldSet(
-            legend = "address.title",
-            hint = Some(Html(messages("address.hint")))
+            legend = "bankDetails.title",
+            hint = Some(Html(messages("bankDetails.hint")))
         ) {
 
             @inputText(
                 form = form,
-                id = "name",
-                name = "name",
-                label = "address.name.heading",
-                autocomplete = Some("off")
+                id = "accountName",
+                name = "accountName",
+                label = "bankDetails.name.heading",
+                hint = Some(messages("bankDetails.name.hint")),
+                attributes = Map("autocomplete" -> "off")
             )
 
             @inputText(
                 form = form,
-                id = "addressLine1",
-                name = "addressLine1",
-                label = "address.line1.heading",
-                hiddenLabel = Some("address.line1.hidden"),
-                autocomplete = Some("address-line1")
+                id = "sortCode",
+                name = "sortCode",
+                label = "bankDetails.sortCode.heading",
+                hint = Some(messages("bankDetails.sortCode.hint")),
+                classes = Some("govuk-input--width-5"),
+                attributes = Map("autocomplete" -> "off")
             )
 
             @inputText(
                 form = form,
-                id = "addressLine2",
-                name = "addressLine2",
-                label = "",
-                hiddenLabel = Some("address.line2.hidden"),
-                autocomplete = Some("address-line2")
-            )
-
-            @inputText(
-                form = form,
-                id = "city",
-                name = "city",
-                label = "address.city.heading",
-                autocomplete = Some("address-level2")
-            )
-
-            @inputText(
-                form = form,
-                id = "postcode",
-                name = "postcode",
-                label = "address.postcode.heading",
-                autocomplete = Some("postal-code")
+                id = "accountNumber",
+                name = "accountNumber",
+                label = "bankDetails.accountNumber.heading",
+                hint = Some(messages("bankDetails.accountNumber.hint")),
+                classes = Some("govuk-input--width-10"),
+                attributes = Map("autocomplete" -> "off")
             )
         }
 
