--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/SessionExpiredPage.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/SessionExpiredPage.scala.html
@@ -16,12 +16,13 @@
 
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html._
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.components.Title
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 
 @this(layout: Layout)
 
 @()(implicit request: Request[_], messages: Messages)
 
-    @layout(pageTitle = Title(messages("session_expired.title"))) {
+    @layout(pageTitle = Title(messages("session_expired.title")), NavigatorBack(None)) {
 
         @components.heading(messages("session_expired.title"))
         @components.paragraph(messages("session_expired.guidance"))
