--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/UploadFormView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/UploadFormView.scala.html
@@ -19,13 +19,13 @@
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html._
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.upscan.UpscanInitiateResponse
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.errorSummary
-@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.uploadBodyCreate
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.uploadBodyAmend
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components.uploadForm
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 
 @this(
         layout: Layout,
-        uploadBody: uploadBodyCreate,
+        uploadBody: uploadBodyAmend,
         uploadForm: uploadForm,
         errorSummary: errorSummary,
         continueButton: components.continueButton,
@@ -34,7 +34,6 @@
 
 @(
         upscanInitiateResponse : UpscanInitiateResponse,
-        claimType: Option[ClaimType],
         isFirstUpload: Boolean,
         error: Option[FormError] = None,
         backLink: NavigatorBack
@@ -46,6 +45,6 @@
 
     @components.heading(messages("upload_documents.title"))
 
-    @uploadBody(uploadForm(upscanInitiateResponse, isFirstUpload, error), claimType)
+    @uploadBody(uploadForm(upscanInitiateResponse, isFirstUpload, error))
 
 }
