--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadFileTypes.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadFileTypes.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,17 +12,22 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.amend
+@this(govukDetails : GovukDetails)
 
-import play.api.libs.json.{Json, OFormat}
-import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.Answers
-import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.upscan.UploadedFile
+@()(implicit messages: Messages)
 
-final case class AmendAnswers(caseReference: Option[CaseReference] = None, uploads: Seq[UploadedFile] = Seq.empty)
-    extends Answers
-
-object AmendAnswers {
-  implicit val formats: OFormat[AmendAnswers] = Json.format[AmendAnswers]
+@fileTypes ={
+  <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-2">
+   <li>@messages("upload_documents.body.files.bullet.image")</li>
+   <li>@messages("upload_documents.body.files.bullet.pdf")</li>
+  </ul>
 }
+
+<p class="govuk-body">@messages("upload_documents.body.files.size")</p>
+
+@govukDetails(Details(
+ summary = Text(messages("upload_documents.body.files.bullet.heading")),
+ content = HtmlContent(fileTypes)
+))
