--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CheckYourAnswersView.scala.html
@@ -36,7 +36,7 @@
     @components.heading(messages("amend.check_answers.title"))
 
     @summaryList(
-        id = "amend_section",
+        id = "important_info_section",
         heading = Some(messages("amend.check_answers.information.title")),
         summaryListRows = Seq(
             Some(SummaryListRow(
@@ -46,6 +46,16 @@
                 ),
                 value = Value(
                     content = Text(amendClaim.caseReference.number)
+                ),
+                actions = None
+            )),
+            Some(SummaryListRow(
+                classes = "upload_row",
+                key = Key(
+                    content = Text(messages("amend.check_answers.information.uploadedDocuments"))
+                ),
+                value = Value(
+                    content = HtmlContent(amendClaim.uploads.map(_.fileName).mkString("<br>"))
                 ),
                 actions = None
             ))
