NF-262 Amend Attach Documents up to check answers

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/AttachMoreDocumentsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/AttachMoreDocumentsView.scala.html
@@ -33,12 +33,16 @@
 
 @layout(pageTitle = Title(form, messages("amend.attach_more_documents.title")), backLink) {
 
+    @components.heading(messages("amend.attach_more_documents.title"))
+
     @formHelper(action = AttachMoreDocumentsController.onSubmit(), 'autoComplete -> "off") {
         @errorSummary(form.errors)
 
         @yesNo(
             form = form,
-            label = messages("amend.attach_more_documents.title")
+            label = messages("amend.attach_more_documents.hint"),
+            legendAsHeading = false,
+            inline = true
         )
 
       @continueButton()
