--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/CheckYourAnswersView.scala.html
@@ -53,10 +53,10 @@
             Some(SummaryListRow(
                 classes = "has_supporting_documents_row",
                 key = Key(
-                    content = Text(messages("amend.check_answers.information.hasNoSupportingDocuments"))
+                    content = Text(messages("amend.check_answers.information.attach_more_documents"))
                 ),
                 value = Value(
-                    content = Text(MessageKey.apply("amend.check_answers.information.hasNoSupportingDocuments", amendClaim.hasAttachedDocuments.toString ))
+                    content = Text(MessageKey.apply("amend.check_answers.information.attach_more_documents", amendClaim.hasMoreDocuments.toString ))
                 ),
                 actions = None
                 )
